public/css/styles.css
/* ... */
.bg-light {
  background-color: (--background-color);
}

.sticky-bottom {
  position: sticky;
  padding-top: 16px;
  padding-bottom: 16px;
  border-top: var(--base-border);
  border-bottom: none;
  bottom: 0;
  left: 0;
  padding-left: 264px;
  background-color: var(--default-background-color);
  margin-bottom: -12px;
  backdrop-filter: blur(2px);
  -webkit-backdrop-filter: blur(10px);
  background-color: rgb(255 255 255 / 28%);
  transition: background-color 0.3s ease;
}

.clickable-row:hover {
  background-color: #f9f9f9;
  color: var(--brand-color);
  border-radius: var(--base-border-radius);
}



.scroll-container {
  overflow-x: auto;
  flex-wrap: nowrap;
}

section {
  padding-top: 12px;
  margin: auto;
}

@media screen and (max-width: 900px) {

  .site-title {
    padding: 0px;
  }

  .sidebar-header {
    display: flex;
    width: 100%;
    align-items: center;
    justify-content: space-between;
    padding: 20px;
  }

  .sidebar,
  .sidebar-header {
    flex: 1 100%;
  }

  .site-title {
    display: flex;
    justify-content: space-between;
    align-items: center;
  }

  .main-content {
    width: 100%;
  }

  .sidebar-footer {
    margin-top: inherit;
  }

  .nav-item {
    padding-top: 10px;
    padding-bottom: 10px;
  }

  .nav-toggle {
    display: block;
  }

  .menu-toggle-container {
    height: 32px;
    padding-top: 8px;
  }

  #nav-icon1 {
    display: flex;
  }
}





/* Tables */

.table-container {
  border-radius: var(--base-border-radius);
  border: var(--base-border);
  min-width: 100%;
  overflow-x: auto;
  padding-bottom: 2px;
}


table {
  border-spacing: 0;
  border-collapse: collapse;
  width: 100%;
}

thead tr {
  border-top: 0px;
  background-color: #f9fafb;
}

th {
  font-weight: 500;
  color: #111827;
  color: #475467;
  font-size: 14px;
}

tr {
  height: 48px;
  border-top: var(--base-border);
  border-bottom: var(--base-border);
  box-shadow: var(--base-box-shadow);
  -webkit-box-shadow: var(--base-box-shadow);
  background-color: #ffffff;
}

thead>tr:first-child:hover {
  background-color: inherit;
  cursor: inherit;
}

tr:hover {
  background-color: var(--offwhite);
  cursor: pointer;
}

tr:last-child {
  border-bottom: 0px;
}


.table-product-image-container {
  height: 36px;
  width: 36px;
  border: 1px solid #ededed;
  border-radius: 50%;
  padding: 4px;
}

.table-product-image-container>img {
  max-width: 100%;
  max-height: 100%;
  object-fit: cover;
}


th,
td {
  line-height: 22px;
  padding: 4px 20px;
  white-space: nowrap;
}

td {
  font-size: var(--font-14);
  font-weight: 400;
  color: var(--base-color);
}



/* Buttons and links  */

button,
.btn {
  border: var(--base-border);
  color: var(--base-color);
  border-radius: var(--base-border-radius);
  padding: 10px 16px;
  font-size: var(--font-14);
  background: white;
  font-weight: 500;
  transition: 0.4s;
  box-shadow: var(--base-box-shadow);
  -webkit-box-shadow: var(--base-box-shadow);
}

.dropdown-toggle::after {
  display: none;
}

.btn-primary {
  background-color: var(--brand-color);
  color: var(--offwhite);
  border-color: var(--offwhite);

}

.btn:hover {
  background-color: var(--base-color);
  color: var(--offwhite);
  border-color: var(--offwhite);
}

.btn-primary:hover {
  background-color: #fff;
  color: var(--brand-color);
  border-color: var(--brand-color);
}


.no-styling {
  text-decoration: none;
}

@media (max-width:900px) {
  .w-sm-100 {
    width: 100%;
  }
}

/* Forms and inputs */

.form-row {
  border-bottom: 1px solid #ededed;
  padding: 24px 0px 24px 0px;
}

label {
  font-size: 15px;
  font-weight: 500;
}

.form-control,
.form-select {
  box-shadow: var(--base-box-shadow);
  border: var(--base-border);
  border-radius: var(--base-border-radius);

}

.form-check-input.xl-form-check {
  width: 20px;
  height: 20px;
}

.form-check-input {
  cursor: pointer;
}

.form-check-input:checked {
  background-color: var(--cyan-600);
  border-color: var(--cyan-600);
}

.form-check-input:focus {
  border-color: var(--cyan-600);
  /* Adjusts the border color */
  outline: none;
  /* Removes the default browser outline */
  box-shadow: 0 0 0 3px rgba(255, 165, 0, 0.5);
  /* Orange focus shadow */
}

/* TO DO */

.token {
  padding: 2px 8px;
  background-color: var(--offwhite);
  color: var(--base-color);
  border-radius: 30px;
  border: var(--base-border);
  font-size: var(--font-12);
  font-weight: 500;
  border-color: var(--offwhite);
}

.token.green {
  color: #027A48;
  background-color: #ECFDF3;
  border-color: #ECFDF3;
}

.token.red {
  color: #b91c1c;
  background-color: #fef2f2;
  border-color: #fef2f2;
}

.availabilityIndicator {
  width: 8px;
  height: 8px;
  border-radius: 50%;
  background-color: green;
  position: absolute;
  top: 5px;
  right: 4px;
}

/* cards */


/* Booking specific */

.booking-summary>div {
  border-top: 1px solid #ededed;
  padding-top: 10px;
}

.booking-summary>div:first-child {
  border-top: none;
}


/* Login and sign-up */

#login-layout {
  display: flex;
  justify-content: center;
  /* Horizontal centering */
  align-items: center;
  /* Vertical centering */
  min-height: 100vh;
  /* Ensures the section takes at least the height of the viewport */
  max-width: 380px;
  margin: auto;
}

/* Optional: Responsive adjustment */
@media (max-width: 992px) {

  /* Adjust based on your layout's needs */
  #login-layout {
    min-height: auto;
    padding: 20px;
  }
}

/* Utilities */
.unstyled {
  border: none;
  background-color: inherit;
  outline: transparent;
  color: inherit;
  text-decoration: none;
}

.hidden {
  display: none;
}


.active {
  background-color: #f2f2f2;
  transition: 0.3s;
  /* border-top:1px solid #ededed;
    border-bottom:1px solid #ededed; */
}

.active>.nav-item {
  color: var(--brand-color);
}

.accordion-button::after {
  margin-left: 20px;
}

.accordion-button:not(.collapsed) {
  background-color: var(--cyan-100);
}

.dotted-bottom-border {
  border-bottom: 1px dotted #000;
}
/* ... */

